--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.11",
@@ -17,7 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.119",
     "@mui/material": "^5.11.8",
     "@mui/x-data-grid-premium": "^5.17.26",
-    "@mui/x-date-pickers": "^6.0.4",
+    "@mui/x-date-pickers": "^6.20.2",
     "@next/font": "^14.2.3",
     "@types/node": "18.11.18",
     "@types/react-dom": "^18.2.17",
@@ -32,11 +33,12 @@
     "next-i18next": "^15.3.0",
     "notistack": "^2.0.8",
     "nprogress": "^0.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-i18next": "^14.1.1",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "swr": "^2.0.1",
     "ts-key-enum": "^2.0.12",
     "yup": "^1.0.0"
